# mrinimitable

./: .eslintignore  .eslintrc  .git-blame-ignore-revs  .gitignore  .mergify.yml  .pre-commit-config.yaml  .releaserc  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  attributions.md  babel_extractors.csv  codecov.yml  crowdin.yml  cypress.config.js  hooks.md  node_utils.js  package.json  pyproject.toml
cypress/fixtures/: data_field_validation_doctype.js
cypress/integration/: control_attach.js  control_barcode.js  control_currency.js  control_data.js  control_date.js  control_duration.js  control_dynamic_link.js  control_float.js  control_icon.js  control_link.js  control_phone.js  control_select.js  dashboard_links.js  data_field_form_validation.js  datetime.js  datetime_field_form_validation.js  depends_on.js  file_uploader.js  form.js  form_builder.js  form_tour.js  grid.js  grid_configuration.js  grid_keyboard_shortcut.js  grid_pagination.js  grid_search.js  kanban.js  list_paging.js  list_view.js  list_view_settings.js  login.js  multi_select_dialog.js  permissions.js  query_report.js  relative_time_filters.js  report_view.js  sidebar.js  socket_updates.js  table_multiselect.js  url_data_field.js  (+4 more)
cypress/support/: commands.js
esbuild/: esbuild.js  ignore-assets.js  mrinimitable-html.js  mrinimitable-vue-style.js  utils.js
mrinimitable/: __init__.py  _optimizations.py  app.py  apps.py  auth.py  boot.py  build.py  cache_manager.py  client.py  config.py  coverage.py  defaults.py  deferred_insert.py  deprecation_dumpster.py  exceptions.py  handler.py  hooks.py  installer.py  locale.py  middlewares.py  migrate.py  monitor.py  mrinimitableclient.py  oauth.py  onboarding.py  parallel_test_runner.py  patches.txt  permissions.py  push_notification.py  rate_limiter.py  realtime.py  recorder.py  sessions.py  share.py  test_runner.py  translate.py  twofactor.py
mrinimitable/api/: __init__.py  v1.py  v2.py
mrinimitable/commands/: __init__.py  gettext.py  redis_utils.py  scheduler.py  site.py  test_commands.py  testing.py  translate.py  utils.py
mrinimitable/contacts/: address_and_contact.py
mrinimitable/core/: README.md  notifications.py  utils.py
mrinimitable/database/: __init__.py  database.py  db_manager.py  operator_map.py  query.py  schema.py  sequence.py  utils.py
mrinimitable/desk/: calendar.py  desk_page.py  (+11 more)
realtime/: handlers.js
(+1710 files in other folders)
