[project]
name = "mrinimitable"
authors = [
    { name = "Mrinimitable Technologies Pvt Ltd", email = "developers@mrinimitable.io"}
]
description = "Metadata driven, full-stack low code web framework"
requires-python = ">=3.10,<3.14"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    # core dependencies
    "Babel~=2.16.0",
    "Click~=8.2.0",
    "filelock~=3.18.0",
    "filetype~=1.2.0",
    "GitPython~=3.1.44",
    "Jinja2~=3.1.6",
    "Pillow~=11.3.0",
    "PyJWT~=2.10.1",
    "PyMySQL==1.1.1",
    "pypdf~=6.0.0",
    "mysqlclient==2.2.7",
    "PyQRCode~=1.2.1",
    "PyYAML~=6.0.2",
    "RestrictedPython~=8.0",
    "AccessControl~=7.2",
    "WeasyPrint==59.0",
    "pydyf==0.11.0",
    "Werkzeug==3.1.3",
    "Whoosh~=2.7.4",
    "beautifulsoup4~=4.13.4",
    "bleach-allowlist~=1.0.3",
    "bleach[css]~=6.2.0",
    "chardet~=5.2.0",
    "croniter~=6.0.0",
    "cryptography~=45.0.4",
    "cssutils~=2.11.1",
    "email-reply-parser~=0.5.12",
    "html5lib~=1.1",
    "ipython~=8.37.0",
    "ldap3~=2.9",
    "markdown2~=2.5.3",
    "MarkupSafe~=3.0.2",
    "num2words~=0.5.14",
    "oauthlib~=3.2.2",
    "openpyxl~=3.1.5",
    "orjson~=3.10.18",
    "passlib~=1.7.4",
    "pdfkit~=1.0.0",
    "phonenumbers~=9.0.7",
    "premailer~=3.10.0",
    "psutil~=7.0.0",
    "psycopg2-binary~=2.9.1",
    "pyOpenSSL~=25.1.0",
    "pydantic~=2.11.7",
    "pyotp~=2.9.0",
    "python-dateutil~=2.9.0",
    "pytz==2025.2",
    "rauth~=0.7.3",
    "redis~=6.2.0",
    "hiredis~=3.2.1",
    "requests-oauthlib~=2.0.0",
    "requests~=2.32.4",
    "rq==2.4.0",
    "rsa~=4.9",
    "semantic-version~=2.10.0",
    "sentry-sdk~=1.45.1",
    "sqlparse~=0.5.0",
    "sql_metadata~=2.17.0",
    "tenacity~=9.1.2",
    "terminaltables~=3.1.10",
    "traceback-with-variables~=2.2.0",
    "typing_extensions>=4.6.1,<5",
    "tomli~=2.2.1",
    "uuid-utils~=0.11.0",
    "xlrd~=2.0.2",
    "zxcvbn~=4.5.0",
    "markdownify~=1.1.0",
    "google-api-python-client~=2.172.0",
    "google-auth-oauthlib~=1.2.2",
    "google-auth~=2.40.3",
    "posthog~=5.0.0",
    "vobject~=0.9.9",
    "pycountry~=24.6.1",
]

# 👇 Local development-only packages
[tool.mrinimitable.local-dependencies]
pypika = { path = "../pypika", develop = true }
gunicorn = { path = "../gunicorn", develop = true }
